@@ -5,7 +5,7 @@
 	 type="advanced_colors"
 	 section="/fun/colors/."
 	 mode="*"
-	 difficulty="3"
+	 difficulty="4"
 	 icon="boardicons/advanced_colors.png"
 	 author="Pascal Georges (pascal.georges1@free.fr)"
 	 boarddir="advanced_colors">
