@@ -1,3 +1,6 @@
+2003-02-17  Pascal Georges <pascal.georges1@free.fr>
+	* src/boards/menu.c : if difficulty > 3 then display red stars instead of yellow ones
+
 2003-02-17  Bruno Coudoin  <bruno.coudoin@free.fr>
 
 	* Makefile.am: re-added gcompris.spec instead of .spec.in
